--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".TriviaGameApplication"
         android:allowBackup="true"
@@ -13,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TriviaGameApplication"
         tools:targetApi="31">
+        <activity
+            android:name=".QuestionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartGameActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
