--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.TriviaGameApplication"
         tools:targetApi="31">
         <activity
-            android:name=".QuestionActivity"
+            android:name=".question.QuestionActivity"
             android:exported="false" />
         <activity
             android:name=".StartGameActivity"
